# didcomm-demo-inkyphat-pi

./: .gitignore  README.md  aries_askar-0.3.2-py3-none-linux_armv6l.whl  pyproject.toml
src/: __main__.py  quickstart.py
